# szark

./: .gitignore  .gitmodules  LICENSE  README.md  update_external_libs.sh
client/desktop_client/: .gitignore  pom.xml
client/desktop_client/src/main/java/com/jdotsoft/jarloader/: JarClassLoader.java
client/desktop_client/src/main/java/eu/slomkowski/szark/client/: HardcodedConfiguration.java  Launcher.java  SzarkClient.java
client/desktop_client/src/test/java/eu/slomkowski/szark/client/: JinputTest.java
firmware/: .gitignore
firmware/arm_driver/: .cproject  .project  Makefile  command-chars.h  global.h  global.hpp  i2c-slave.c  i2c-slave.cpp  i2c-slave.h  i2c-slave.hpp  joint.cpp  joint.h  joint.hpp  main.c  main.cpp  motors.c  motors.cpp  motors.h
firmware/bridge/: .cproject  .project  LUFAConfig.h  Makefile  MenuClass.cpp  MenuClass.h  MenuClass.hpp  analog.c  analog.cpp  analog.h  arm.c  arm.h  arm_driver.cpp  arm_driver.h  arm_driver.hpp  buttons.c  buttons.cpp  buttons.h  buttons.hpp  delay.cpp  delay.h  delay.hpp  expander.cpp  expander.h  global.h  global.hpp  i2c.cpp  i2c.h  i2c.hpp  i2c_expander.c  i2c_expander.h  killswitch.cpp  killswitch.h  killswitch.hpp  lcd.cpp  lcd.h  lcd.hpp  led.cpp  led.hpp  main.c  (+24 more)
firmware/bridge-bootloader/: BootloaderCDC.c  BootloaderCDC.h  Makefile  makefile
firmware/bridge/usbdrv/: usbdrv.c  usbdrv.h
firmware/common/: arm_driver-commands.h  arm_driver-commands.hpp  motor_driver-commands.h  usb-commands.h  usb-commands.hpp  usb-settings.hpp
firmware/motor_driver/: .cproject  .project  Makefile  controller.c  controller.cpp  controller.h  controller.hpp  global.h  i2c-slave.cpp  i2c-slave.h  main.c  main.cpp  motor.cpp  motor.h  motor.hpp  pwm.c  pwm.cpp  pwm.h  uart.c  uart.h
host/server/: .cproject  .gitignore  .project  CMakeLists.txt  SConstruct  USBRawCommunicator.cpp  USBRawCommunicator.h  bridge.cpp  bridge.h  config.h  extra_func.cpp  extra_func.h  global.h  logger.properties  loggerTest.properties  main.cpp  networking.cpp  networking.h  structures.cpp  structures.h  watchdog.cpp  watchdog.h
host/server/src/: BridgeProcessor.cpp  BridgeProcessor.hpp  DataHolder.cpp  DataHolder.hpp  IRequestProcessor.hpp  Interface.cpp  Interface.hpp  InterfaceManager.cpp  InterfaceManager.hpp  NetServer.cpp  NetServer.hpp  RequestQueuer.cpp  RequestQueuer.hpp  SConscript  USBCommunicator.cpp  USBCommunicator.hpp  USBRawCommunicator.cpp  USBRawCommunicator.hpp  WifiInfo.cpp  WifiInfo.hpp  main.cpp  utils.cpp  utils.hpp
host/server/test/: BridgeProcessorTest.cpp  ConfigurationTest.cpp  InterfaceManagerTest.cpp  RequestQueuerTest.cpp  USBCommunicationTest.cpp  WifiInfoTest.cpp  main.cpp
host/szark_client/: .gitignore  pom.xml
host/szark_client/src/main/java/eu/slomkowski/szark/client/: ArmVisualizer.java  Battery.java  CameraImageUpdater.java  Hardcoded.java  HardcodedConfiguration.java  JoypadBackend.java  JoypadDataUpdater.java  MainWindow.java  MainWindowDummy.java  MotorParams.java  Motors.java  MoveControlWindow.java  SzarkClient.java  SzarkDataUpdater.java  SzarkStatus.java
host/szarkcam/: CMakeLists.txt  logger.properties  loggerTest.properties  main.cpp
host/szarkcam/src/: CameraImageCombiner.cpp  CameraImageCombiner.hpp  CameraImageGrabber.cpp  CameraImageGrabber.hpp  Configuration.hpp  GripperImageSource.cpp  GripperImageSource.hpp  NetworkServer.cpp  NetworkServer.hpp  Painter.hpp  main.cpp  utils.cpp
host/szarkcam/test/: CameraImageCombinerTest.cpp  CameraImageGrabberTest.cpp  GripperImageSourceTest.cpp  NetworkServerTest.cpp
host/tests/: flood.py  image_receiver.py  send_requests.py  test_usb.py
pcb/: .gitignore  DESCRIPTION  README.md  arm_driver.brd  arm_driver.sch  bridge.brd  bridge.sch  charger.brd  charger.sch  eagle.epf  encoder.brd  encoder.sch  encoder_se.brd  encoder_se.sch  encoder_wrist.brd  encoder_wrist.sch  i2c_expander.brd  i2c_expander.sch  motor_driver.brd  motor_driver.sch  robot.lbr
server/: 60-szark-udev-rule.rules  common.cmake  szark-supervisord.conf
server/camera_server/: .gitignore  CMakeLists.txt  config.ini  example-config.ini  logger.properties
server/camera_server/src/: CameraImageGrabber.cpp  CameraImageGrabber.hpp  GripperHudPainter.cpp  GripperHudPainter.hpp  GripperImageSource.cpp  GripperImageSource.hpp  HeadHudPainter.cpp  HeadHudPainter.hpp  HeadImageSource.cpp  HeadImageSource.hpp  ImageSource.hpp  JpegEncoder.cpp  JpegEncoder.hpp  NetworkServer.cpp  NetworkServer.hpp  Painter.hpp  main.cpp  main_framegrabber.cpp  main_gripper.cpp  utils.hpp
server/camera_server/test/: CameraImageGrabberTest.cpp  GripperImageSourceTest.cpp  JpegEncoderTest.cpp  NetworkServerTest.cpp  main.cpp
server/common_lib/: .gitignore  CMakeLists.txt
server/common_lib/include/: ColorPatternLayout.hpp  Configuration.hpp  DataHolder.hpp  Interface.hpp  IoServiceProvider.hpp  SharedInterfaceProvider.hpp  convert.hpp  initialization.hpp  logging.hpp  utils.hpp
server/common_lib/src/: ColorPatternLayout.cpp  Configuration.cpp  DataHolder.cpp  Interface.cpp  IoServiceProvider.cpp  SharedInterfaceProvider.cpp  convert.cpp  initialization.cpp  logging.cpp  utils.cpp
server/common_lib/test/: ConfigurationTest.cpp  SharedInterfaceProviderTest.cpp  main.cpp
server/control_server/: .gitignore  CMakeLists.txt  config.ini  example.config.ini
server/control_server/src/: BridgeProcessor.cpp  BridgeProcessor.hpp  Configuration.cpp  DataHolder.cpp  DataHolder.hpp  IRequestProcessor.hpp  Interface.cpp  Interface.hpp  InterfaceManager.cpp  InterfaceManager.hpp  NetServer.cpp  NetServer.hpp  OSInformationProcessor.cpp  OSInformationProcessor.hpp  RequestQueuer.cpp  RequestQueuer.hpp  USBCommunicator.cpp  USBCommunicator.hpp  WifiInfo.cpp  WifiInfo.hpp  convert.cpp  convert.hpp  main.cpp  utils.cpp
server/control_server/test/: BridgeProcessorTest.cpp  InterfaceManagerTest.cpp  NetServerTest.cpp  RequestQueuerTest.cpp  USBCommunicationTest.cpp  WifiInfoTest.cpp  main.cpp
server/tests/: image_receiver.py  send_requests.py
server/utils/: .gitignore  szarkinfo.py
(+61 files in other folders)
